# EntFA

./: .gitignore  pyproject.toml
examples/: evaluation.py
rl_training/: rl_utils.py  train.py
src/EntFA/: model.py  utils.py
